# hos

./: .gitignore  GRAPHCDM.C  Makefile  asmhead.asm  bar.c  binImg.txt  bochs.txt  boot.asm  bootpack.s  clearscn.C  else.txt  foo.asm  frac01.C  haribote.asm  haribote.img  haribote.sys  hos.img  hos02.asm  hos03.asm  ipl.asm  ipl10.asm  pm.inc  pm1.inc  pmtest.asm  pmtest1.asm  readme.txt  test.c
06_day/: haribote.img
19_day/: Makefile
20_day/: Makefile
21_day/: Makefile
22_day/: Makefile
23_day/: Makefile
24_day/: Makefile
25_day/: Makefile
M6413640/: M6413640.IMG  bochsout.txt  bochsrc.bxrc  readme.txt
aasm092/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
aasm092/aasm/: Makefile.am  Makefile.in  args.c  args.h  main.c
aasm092/asm-sparc/: Makefile.am  Makefile.in  asm.c  asm.h  asm_directive.c  asm_directive.wlex  asm_help.c  asm_process.c  asm_reloc.c  fields.h  gen_opcodes.pl  instr.c  instr.skel  module.c  opcodes_id.h  opcodes_v8_arith.list  opcodes_v8_branch.list  opcodes_v8_float.list  opcodes_v8_logical.list  opcodes_v8_misc.list  opcodes_v8_storeload.list  opcodes_v9.list  reg.c  reg.perf
aasm092/asm-sparc/inc/: v8.def
aasm092/asm-x86/: Makefile.am  Makefile.in  asm.c  asm.h  asm_directive.c  asm_directive.wlex  asm_help.c  asm_mem.c  asm_mem_table.c  asm_mem_table.h  asm_process.c  asm_reloc.c  asm_x86.c  flags.h  gen_opcodes.pl  instr.c  instr.skel  module.c  opcodes_3dnow.list  opcodes_3dnow2.list  opcodes_fpu.list  opcodes_i386.list  opcodes_i486.list  opcodes_i586.list  opcodes_i686.list  opcodes_id.h  opcodes_mmx.list  opcodes_mmx2.list  opcodes_sse.list  opcodes_sse2.list  reg.c  reg.perf  reg_id.h
aasm092/doc/: Makefile.am  Makefile.in  aasm-asm-x86.1  aasm.1
aasm092/examples/: Makefile.am  Makefile.in  hello_dos.aasm  hello_unix_sparc.aasm  hello_unix_x86.aasm
aasm092/extra/: Makefile.am  Makefile.in  aasm.el
aasm092/in-parser/: Makefile.am  Makefile.in  build_expr.c  build_expr.h  build_num.c  directive.c  directive.h  directive_align.c  directive_data.c  directive_ifdef.c  directive_include.c  directive_macro.c  directive_mod.c  directive_objinfo.c  directive_proc.c  directive_section.c  directive_symbols.c  directive_warn_err.c  keyword.c  keyword.h  module.c  operator.c  operator.h  parse.c  parse.h  scan.c  scan.h
aasm092/include/: Makefile.am  Makefile.in
aasm092/include/aasm/: Makefile.am  Makefile.in  alloc.h  arch_id.h  color.h  comments.h  disp.h  error.h  expr.h  info.h  instr.h  macro.h  memory.h  memstruct.h  mod_asm_import.h  mod_in_import.h  mod_out_import.h  modules.h  num.h  object.h  proc.h  refcount.h  reloc.h  scope.h  section.h  size.h  symbol.h  types.h
aasm092/libcore/: Makefile.am  Makefile.in  alloc.c  comments.c  disp.c  error.c  expr.c  expr_reduce.c  instr.c  location.c  macro.c  memory.c  modules.c  num.c  num_add.c  num_cmp.c  num_div.c  num_logical.c  num_mul.c  num_neg.c  num_pow.c  num_shift.c  num_sub.c  object.c  oper_b_add.c  oper_b_and.c  oper_b_div.c  oper_b_eq.c  oper_b_mod.c  oper_b_mul.c  oper_b_or.c  oper_b_pow.c  oper_b_shl.c  oper_b_shr.c  oper_b_sub.c  oper_b_xor.c  oper_parentheses.c  oper_u_brack.c  oper_u_neg.c  oper_u_not.c  (+10 more)
aasm092/out-binary/: Makefile.am  Makefile.in  binary.c  binary.h  binary_reloc.c  binary_symbols.c  module.c  out.c  out.h
aasm092/out-coff/: Makefile.am  Makefile.in  coff.c  coff.h  coff_arch.c  coff_bits.h  coff_directive.c  coff_directive.wlex  coff_endian.c  coff_reloc.c  coff_sections.c  coff_symbols.c  module.c  realloc.h
aasm092/out-elf/: Makefile.am  Makefile.in  elf.c  elf.h  elf_arch.c  elf_bits.h  elf_endian.c  elf_obj_sections.c  elf_reloc.c  elf_sections.c  elf_symbols.c  module.c  out.c
aasm092/out-intelhex/: Makefile.am  Makefile.in  intelhex.c  intelhex.h  intelhex_reloc.c  intelhex_symbols.c  module.c
aasm092/out-src/: Makefile.am  Makefile.in  module.c  src.c  src.h
freedos/: bochsout.txt  bochsrc.bxrc  pm.img
freedos/freedos/: freedos.vbox  freedos.vbox-prev  freedos.vdi
freedos/freedos/Logs/: VBox.log.1
hos/: Makefile  hos.vbox  hos.vbox-prev  hos.vdi
hos/Logs/: VBox.log.1  VBox.log.2  VBox.log.3  VBox.png.3
